--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ serde = {version = "1.0", features = ["derive"]}
 log = "0.4"
 env_logger = "0.7.1"
 clap = "~2.33"
+bitcoincash-addr = "0.5.2"
+rand = "0.4.6"
